--- a/app/src/main/res/layout/composer_list.xml
+++ b/app/src/main/res/layout/composer_list.xml
@@ -2,6 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp">
+    android:padding="16dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        tools:src="@android:color/darker_gray"
+        android:id="@+id/composerImage"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:contentDescription="@string/composer_image"/>
+
+    
 </RelativeLayout>
