--- a/app/src/main/res/layout/composer_list.xml
+++ b/app/src/main/res/layout/composer_list.xml
@@ -3,7 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="?attr/selectableItemBackground"
+    android:id="@+id/item_list">
 
     <ImageView
         android:layout_width="80dp"
