--- a/app/src/main/res/layout/activity_composer_page.xml
+++ b/app/src/main/res/layout/activity_composer_page.xml
@@ -4,59 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ComposerPageActivity"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="16dp"
+    tools:context=".ComposerPageActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <ImageView
+            android:id="@+id/composer_item_img"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            tools:src="@android:color/darker_gray"
-            android:id="@+id/composer_item_img"
-            android:contentDescription="@string/composer_item_image"/>
+            android:contentDescription="@string/composer_item_image"
+            tools:src="@android:color/darker_gray" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:text="Composer Name"
-            android:textColor="@android:color/black"
-            android:textSize="24sp"
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
-            android:gravity="center"/>
+            android:gravity="center"
+            android:textColor="@android:color/black"
+            android:textSize="24sp"
+            tools:text="Composer Name" />
     </LinearLayout>
 
     <TextView
-        style="@style/Body"
         android:id="@+id/composer_detail"
-        tools:text="Composer Detail here"
+        style="@style/Body"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        tools:text="Composer Detail here" />
 
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TableRow>
+
             <TextView
                 style="@style/Subtitle"
-                android:text="@string/lahir"/>
+                android:text="@string/lahir" />
+
             <TextView
+                android:id="@+id/composer_born"
                 style="@style/Body"
-                tools:text="01 Agustus 2000, Jerman"
-                android:id="@+id/composer_born"/>
+                tools:text="01 Agustus 2000, Jerman" />
         </TableRow>
+
         <TableRow>
+
             <TextView
                 style="@style/Subtitle"
-                android:text="@string/wafat"/>
+                android:text="@string/wafat" />
+
             <TextView
+                android:id="@+id/composer_died"
                 style="@style/Body"
-                tools:text="02 Agustus 2001, Indonesia"
-                android:id="@+id/composer_died"/>
+                tools:text="02 Agustus 2001, Indonesia" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
