--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,10 @@
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/rv">
-        
+        android:layout_height="wrap_content">
+
     </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
