--- a/app/src/main/res/layout/activity_composer_page.xml
+++ b/app/src/main/res/layout/activity_composer_page.xml
@@ -8,9 +8,10 @@
     tools:context=".ComposerPageActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,6 +25,7 @@
                 tools:src="@android:color/darker_gray" />
 
             <TextView
+                android:id="@+id/composer_item_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
@@ -31,7 +33,6 @@
                 android:gravity="center"
                 android:textColor="@android:color/black"
                 android:textSize="24sp"
-                android:id="@+id/composer_item_name"
                 tools:text="Composer Name" />
         </LinearLayout>
 
@@ -49,7 +50,7 @@
             <TableRow>
 
                 <TextView
-                    style="@style/Subtitle"
+                    style="@style/Body.Grey"
                     android:text="@string/lahir" />
 
                 <TextView
@@ -61,7 +62,7 @@
             <TableRow>
 
                 <TextView
-                    style="@style/Subtitle"
+                    style="@style/Body.Grey"
                     android:text="@string/wafat" />
 
                 <TextView
