--- a/app/src/main/res/layout/activity_composer_page.xml
+++ b/app/src/main/res/layout/activity_composer_page.xml
@@ -39,6 +39,7 @@
         <TextView
             android:id="@+id/composer_detail"
             style="@style/Body"
+            android:layout_width="match_parent"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             tools:text="Composer Detail here" />
@@ -56,7 +57,7 @@
                 <TextView
                     android:id="@+id/composer_born"
                     style="@style/Body"
-                    tools:text="01 Agustus 2000, Jerman" />
+                    tools:text="Wina, Kekaisaran Austria, 26 Maret 1827 (umur 56)" />
             </TableRow>
 
             <TableRow>
